--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+*, *::after, *::before {
+   padding: 0;
+   border: 0;
+   box-sizing: border-box;
+}
+
 body {
-   background-color: #222;
-   color: #fff;
+   background-color: #ccc;
+   color: #000;
 }
 
