--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,16 @@
    box-sizing: border-box;
 }
 
+html {
+   font-size: 62.5%;
+}
+
 body {
    font-family: "Poppins";
    background-color: #333;
    color: #fff;
    text-align: center;
+   font-size: 1.4rem;
 }
 
 h1, h2, h3 {
