--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -1,20 +1,21 @@
 .Card {
-   background-color: red;
-   border: 3px solid red;
+   border: 3px solid;
    border-radius: 10px;
    overflow: hidden;
    margin: 10px;
 
    display: flex;
    flex-direction: column;
-   max-width: 30rem;
-   min-width: 30rem;
+   max-width: 40rem;
+   min-width: 40rem;
 }
 
 .Card .Title {
-   padding: 5px 0;
    display: flex;
    justify-content: center;
+   padding: 5px 0;
+   font-size: 1.8rem;
+   font-weight: 600;
 }
 
 .Card .Content {
